lib/virtru_sdk_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for Virtru SDK.
///
/// Regenerate bindings with `dart run ffigen`.
///
class VirtruSdkFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VirtruSdkFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VirtruSdkFlutterBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Allows for .NET P/Invoke to free native memory
  /// \param vMemoryPtr - The malloc'd memory to be freed.
  int VFreeMemory(
    ffi.Pointer<ffi.Void> vMemoryPtr,
  ) {
    return _VFreeMemory(
      vMemoryPtr,
    );
  }

  late final _VFreeMemoryPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>>(
          'VFreeMemory');
  late final _VFreeMemory =
      _VFreeMemoryPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// DEPRECATED in favor of OIDC client credential flows
  /// Create a new Virtru client instance with owner and appId.
  /// \param owner - The owner's email address to be used to authenticate for encrypt, decrypt
  /// and policy management. Any data encrypted will be owned by the supplied email address.
  /// The owner will always have access to the encrypted data (TDF).
  /// \param appId - The virtru application ID can be obtained from the
  /// <a href="https://developer.virtru.com/docs/how-to-download-appid-token">Virtru Dashboard</a>
  /// \return VirtruClient opaque object.
  /// NOTE: On failure returns NULL ptr.
  VClientPtr VClientCreateWithAppId(
    ffi.Pointer<ffi.Char> owner,
    ffi.Pointer<ffi.Char> appId,
  ) {
    return _VClientCreateWithAppId(
      owner,
      appId,
    );
  }

  late final _VClientCreateWithAppIdPtr = _lookup<
      ffi.NativeFunction<
          VClientPtr Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('VClientCreateWithAppId');
  late final _VClientCreateWithAppId = _VClientCreateWithAppIdPtr.asFunction<
      VClientPtr Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// DEPRECATED in favor of OIDC client credential flows
  /// Create a new Virtru Client instance with owner and HMAC apiKey/apiSecret.
  /// <a href="https://developer.virtru.com/docs/how-to-add-authentication#section-3-hmac-token-and-secret">Contact Virtru</a> to get your
  /// organization's HMAC apiKey/apiSecret
  /// \param owner - The owner's email address to be used to authenticate  for encrypt, decrypt
  /// and policy management.
  /// \param apiKey - The HMAC api key
  /// \param apiSecret - The HMAC api secret
  /// \return VirtruClient opaque object.
  /// NOTE: On failure returns NULL ptr.
  VClientPtr VClientCreateWithHMAC(
    ffi.Pointer<ffi.Char> owner,
    ffi.Pointer<ffi.Char> apiKey,
    ffi.Pointer<ffi.Char> apiSecret,
  ) {
    return _VClientCreateWithHMAC(
      owner,
      apiKey,
      apiSecret,
    );
  }

  late final _VClientCreateWithHMACPtr = _lookup<
      ffi.NativeFunction<
          VClientPtr Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('VClientCreateWithHMAC');
  late final _VClientCreateWithHMAC = _VClientCreateWithHMACPtr.asFunction<
      VClientPtr Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// Create a new Virtru Client instance with owner and organization/realm-scoped OIDC client credentials.
  /// <a href="TBDLINK">Contact Virtru</a> to get client credentials for clients in your organization
  /// \param owner - The owner's email address to be used to authenticate  for encrypt, decrypt
  /// \param organizationName - The OIDC realm or organization the client belongs to
  /// \param clientId - The clientId part of the client credentialset issued to the client
  /// \clientSecret - The clientSecret part of the client credentialset issued to the client
  /// \return VirtruClient opaque object.
  /// NOTE: On failure returns NULL ptr.
  VClientPtr VClientCreateWithOIDC(
    ffi.Pointer<ffi.Char> owner,
    ffi.Pointer<ffi.Char> organizationName,
    ffi.Pointer<ffi.Char> clientId,
    ffi.Pointer<ffi.Char> clientSecret,
  ) {
    return _VClientCreateWithOIDC(
      owner,
      organizationName,
      clientId,
      clientSecret,
    );
  }

  late final _VClientCreateWithOIDCPtr = _lookup<
      ffi.NativeFunction<
          VClientPtr Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('VClientCreateWithOIDC');
  late final _VClientCreateWithOIDC = _VClientCreateWithOIDCPtr.asFunction<
      VClientPtr Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Destruct the Virtru client instance.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  void VClientDestroy(
    VClientPtr vClientPtr,
  ) {
    return _VClientDestroy(
      vClientPtr,
    );
  }

  late final _VClientDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(VClientPtr)>>(
          'VClientDestroy');
  late final _VClientDestroy =
      _VClientDestroyPtr.asFunction<void Function(VClientPtr)>();

  /// Enable the internal logger class to write logs to the console for given LogLevel.
  /// The default logLevel is 'Warn'
  int VEnableConsoleLogging(
    VClientPtr vClientPtr,
    int logLevel,
  ) {
    return _VEnableConsoleLogging(
      vClientPtr,
      logLevel,
    );
  }

  late final _VEnableConsoleLoggingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(VClientPtr, ffi.Int32)>>(
          'VEnableConsoleLogging');
  late final _VEnableConsoleLogging =
      _VEnableConsoleLoggingPtr.asFunction<int Function(VClientPtr, int)>();

  /// Set the TDF protocol (format) to be used for encryption and decryption operations. HTML is the
  /// default format.  The protocols refer to the data format after encryption.
  /// Options are .tdf (which is a zip) or HTML.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param vProtocol - type of the protocol (format)
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VSetProtocol(
    VClientPtr vClientPtr,
    int vProtocol,
  ) {
    return _VSetProtocol(
      vClientPtr,
      vProtocol,
    );
  }

  late final _VSetProtocolPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(VClientPtr, ffi.Int32)>>(
          'VSetProtocol');
  late final _VSetProtocol =
      _VSetProtocolPtr.asFunction<int Function(VClientPtr, int)>();

  /// Set the offline mode.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param state - If true, all the TDFs will be encrypted in offline mode that means the symmetric key
  /// stored part of the TDF instead on the server.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VSetOffline(
    VClientPtr vClientPtr,
    int state,
  ) {
    return _VSetOffline(
      vClientPtr,
      state,
    );
  }

  late final _VSetOfflinePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(VClientPtr, ffi.Int)>>(
          'VSetOffline');
  late final _VSetOffline =
      _VSetOfflinePtr.asFunction<int Function(VClientPtr, int)>();

  /// Encrypt the contents of the input file into a TDF. In the process of encryption, a policy is
  /// associated with the TDF. The policy has a unique id which can be used to identify the TDF policy.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param vEncryptFileParamsPtr  - Encrypt file param opaque object holding all the required information for encrypt operations
  /// \param outPolicyId  - On success, it contains policy id.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  /// NOTE: The caller of the api should free outPolicyId buffer.
  int VClientEncryptFile(
    VClientPtr vClientPtr,
    VEncryptFileParamsPtr vEncryptFileParamsPtr,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outPolicyId,
  ) {
    return _VClientEncryptFile(
      vClientPtr,
      vEncryptFileParamsPtr,
      outPolicyId,
    );
  }

  late final _VClientEncryptFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(VClientPtr, VEncryptFileParamsPtr,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('VClientEncryptFile');
  late final _VClientEncryptFile = _VClientEncryptFilePtr.asFunction<
      int Function(VClientPtr, VEncryptFileParamsPtr,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Encrypt the contents of the input file into a RCA TDF. In the process of encryption, a policy is
  /// associated with the TDF. The policy has a unique id which can be used to identify the TDF policy.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param vEncryptFileParamsPtr  - Encrypt file param opaque object holding all the required information for encrypt operations
  /// \param outPolicyId  - On success, it contains policy id.
  /// \param outRcaLink  - On success, it contains RCA tdf link.
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  /// NOTE: The caller of the api should free outPolicyId buffer and outRcaLink.
  int VClientEncryptFileToRCA(
    VClientPtr vClientPtr,
    VEncryptFileParamsPtr vEncryptFileParamsPtr,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outPolicyId,
    ffi.Pointer<ffi.Pointer<ffi.Char>> outRcaLink,
  ) {
    return _VClientEncryptFileToRCA(
      vClientPtr,
      vEncryptFileParamsPtr,
      outPolicyId,
      outRcaLink,
    );
  }

  late final _VClientEncryptFileToRCAPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              VClientPtr,
              VEncryptFileParamsPtr,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('VClientEncryptFileToRCA');
  late final _VClientEncryptFileToRCA = _VClientEncryptFileToRCAPtr.asFunction<
      int Function(
          VClientPtr,
          VEncryptFileParamsPtr,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Decrypt the contents of the TDF file into its original content.
  /// \param vClientPtr - The pointer to Virtru client opaque object.
  /// \param inFilepath - The TDF file on which the decryption is performed
  /// \param outFilepath - The file path of the original content after successful decryption
  /// \return VSTATUS - VSTATUS_SUCCESS on success
  int VClientDecryptFile(
    VClientPtr vClientPtr,
    ffi.Pointer<ffi.Char> inFilepath,
    ffi.Pointer<ffi.Char> outFilepath,
  ) {
    return _VClientDecryptFile(
      vClientPtr,
      inFilepath,
      outFilepath,
    );
  }

  late final _VClientDecryptFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(VClientPtr, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('VClientDecryptFile');
  late final _VClientDecryptFile = _VClientDecryptFilePtr.asFunction<
      int Function(VClientPtr, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
